# MagicSinusoid

./: CMakeLists.txt  README.md
images/: load.xcf
source/: graph.cpp  gui.cpp  loader.cpp  main.cpp  processor.cpp
source/headers/: graph.hpp  gui.hpp  loader.hpp  processor.hpp
